# sbak

./: .gitignore  .travis.yml  Cargo.toml  Makefile  README.md  TODO.md
.hooks/: apply.sh
src/: config.rs  core.rs  lib.rs  main.rs  model.rs  smalllog.rs  sub.rs  util.rs  version.rs
src/core/: entry.rs  extend.rs  fs_tree.rs  hash.rs  ignore.rs  repo.rs  scan.rs  timestamp.rs
src/core/entry/: io.rs
src/core/fs_tree/: io.rs
src/core/ignore/: pattern.rs  test.rs
src/core/ignore/pattern/: parser.rs  test.rs
src/core/ignore/pattern/parser/: test.rs
src/sub/: backup.rs  history.rs  info.rs  init.rs  list.rs  restore.rs
src/sub/init/: bank.rs  repo.rs
src/util/: time.rs
