[package]
authors = ["Igaguri <igagurimk@gmail.com>"]
categories = ["command-line-utilities"]
description = "簡易ファイルバックアップツール"
documentation = "https://docs.rs/sbak"
edition = "2018"
keywords = ["cli", "backup"]
license = "MIT OR Apache-2.0"
name = "sbak"
readme = "README.md"
repository = "https://github.com/IgaguriMK/sbak"
version = "0.2.0"

[dependencies]
anyhow = "1.0"
chrono = {version = "0.4.7", features = ["serde"]}
clap = "2.33"
serde = {version = "1.0.97", features = ["derive"]}
serde_json = "1.0.40"
sha3 = "0.8.2"
thiserror = "1.0.19"
toml = "0.5.1"
